bk-restaurant-listing-page -> 	Add Restaurant Listing page 	Add mvvm-cleancode classes for restaurant list 	Add assets and json files 	Add Room integration

--- a/food-delivery-app/app/src/main/res/values-de/strings.xml
+++ b/food-delivery-app/app/src/main/res/values-de/strings.xml
@@ -5,5 +5,6 @@
     <string name="common_error_network_connection">Netzwerkfehler, bitte versuchen Sie es erneut.</string>
     <string name="common_error_unknown">Unbekannter Fehler.</string>
     <string name="common_error_timeout">Timeout-Fehler.</string>
+    <string name="minute_text">min</string>
     <!-- Common Resources -->
 </resources>
