--- a/food-delivery-app/app/src/main/res/values/strings.xml
+++ b/food-delivery-app/app/src/main/res/values/strings.xml
@@ -5,6 +5,7 @@
     <string name="common_error_network_connection">Network error, please try again.</string>
     <string name="common_error_unknown">Unknown error.</string>
     <string name="common_error_timeout">Timeout error.</string>
+    <string name="minute_text">min</string>
     <!-- Common Resources -->
 
 </resources>
