--- a/food-delivery-app/app/src/main/res/values-de/strings.xml
+++ b/food-delivery-app/app/src/main/res/values-de/strings.xml
@@ -6,5 +6,6 @@
     <string name="common_error_unknown">Unbekannter Fehler.</string>
     <string name="common_error_timeout">Timeout-Fehler.</string>
     <string name="minute_text">min</string>
+    <string name="menu_text">Menu</string>
     <!-- Common Resources -->
 </resources>
