bk-ui-refactor -> Refactor ui

--- a/food-delivery-app/app/src/main/res/values-de/strings.xml
+++ b/food-delivery-app/app/src/main/res/values-de/strings.xml
@@ -7,5 +7,29 @@
     <string name="common_error_timeout">Timeout-Fehler.</string>
     <string name="minute_text"> min</string>
     <string name="menu_text">Menu</string>
+
+    <string name="text_restaurants_section_favorite">FAVORITES</string>
+    <string name="text_restaurants_section_favorite_empty">There is no favorite restaurant</string>
+    <string name="text_restaurants_section_open_empty">There is no open restaurant</string>
+    <string name="text_restaurants_section_open">OPEN RESTAURANTS</string>
+    <string name="text_restaurants_section_order_ahead">CLOSING RESTAURANTS</string>
+    <string name="text_restaurants_section_closed">CLOSED RESTAURANTS</string>
+    <string name="text_filter">Filter</string>
+
+    <string name="text_restaurant_min_price">Minimum Price </string>
+    <string name="text_restaurant_delivery_cost">Delivery Cost </string>
+    <string name="text_restaurant_popularity">Popularity </string>
+    <string name="text_restaurant_duration">Approximately Duration </string>
+    <string name="text_restaurant_best_match">Best Match </string>
+    <string name="text_restaurant_rating">Rating </string>
+    <string name="text_restaurant_average_price">Average Product Price </string>
+    <string name="restaurant_list_sort_best">best</string>
+    <string name="restaurant_list_sort_newest">newest</string>
+    <string name="restaurant_list_sort_rating">rating</string>
+    <string name="restaurant_list_sort_distance">distance</string>
+    <string name="restaurant_list_sort_popularity">popularity</string>
+    <string name="restaurant_list_sort_avg_price">avg price</string>
+    <string name="restaurant_list_sort_delivery_cost">delivery cost</string>
+    <string name="restaurant_list_sort_minimum_cost">minimum cost</string>
     <!-- Common Resources -->
 </resources>
